# django-cognito-jwt

./: Pipfile  pyproject.toml  setup.py.bak
src/django_cognito_jwt/: backend.py  validator.py
