[tool.poetry]
name = "django-cognito-jwt"
version = "0.0.2"
description = "Django backends for AWS Cognito JWT"
authors = ["Michael van Tellingen <m.vantellingen@labdigital.nl>"]
repository = "https://github.com/LabD/django-cognito-jwt"
packages = [
    { include = "django_cognito_jwt", from = "src" }
]
license = "MIT"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6"
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.0"
cryptography = "^2.8"
djangorestframework = "^3.11.0"
pyjwt = "^1.7.1"
requests = "^2.22.0"
redis = "^3.3.11"
decorator = "^4.4.1"


[tool.poetry.dev-dependencies]
pytest = "^4.6"
pyhamcrest = "^2.0.0"
pytest-django = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
